Changed logo, fixed navbar alignment #7

--- a/app-client/src/components/navigationBar/NavigationBar.css
+++ b/app-client/src/components/navigationBar/NavigationBar.css
@@ -3,8 +3,12 @@
     background-color: white;
 }
 
+#brand-logo {
+    width: 10em;
+}
+
 @media screen and (min-width: 992px) {
     .navbar {
-       padding: 15px 300px 8px 300px;
+       padding: 8px 300px 8px 300px;
     }
 }
